--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,2 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+
+    <style name="bottom_nav" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">@dimen/bottom_nav_text_size</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+    </style>
+
+    <style name="bottom_nav_active" parent="bottom_nav">
+        <item name="android:textColor">@color/cdl_yellow</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+    </style>
+
+</resources>
