Implement bottom navigation bar functionality
This update contains significant modifications across the module.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
@@ -15,6 +15,8 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/mobile_navigation" />
 
-    <include layout="@layout/bottom_nav" />
+    <include
+        android:id="@+id/bottom_nav"
+        layout="@layout/bottom_nav" />
 
 </LinearLayout>
