--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
 
     <color name="cdl_yellow">#ffc639</color>
     <color name="cdl_grey">#222528</color>
+    <color name="cdl_blue_grey">#6b7a92</color>
+    <color name="cdl_separator">#222528</color>
 </resources>
