--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,27 @@
         <item name="android:fontFamily">sans-serif-black</item>
     </style>
 
+    <style name="section_label" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:paddingStart">18dp</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:background">@color/cdl_blue_grey</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="store_title" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:paddingBottom">8dp</item>
+    </style>
+
+    <style name="store_info" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">12sp</item>
+        <item name="android:drawableStart">@drawable/icn_check</item>
+        <item name="android:drawablePadding">10dp</item>
+    </style>
+
 </resources>
