Fix separator line color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="cdl_yellow">#ffc639</color>
     <color name="cdl_grey">#222528</color>
     <color name="cdl_blue_grey">#6b7a92</color>
-    <color name="cdl_separator">#222528</color>
+    <color name="cdl_separator">#d8dadb</color>
 </resources>
