--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/navigation_requestequipment"
         android:name="com.vwaber.cdlexercise.ui.requestequipment.RequestequipmentFragment"
         android:label="@string/title_requestequipment"
-        tools:layout="@layout/fragment_requestequipment" />
+        tools:layout="@layout/fragment_requestequipment" >
+        <action
+            android:id="@+id/action_navigation_requestequipment_to_catalog_category_fragment"
+            app:destination="@id/navigation_catalog_category" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_activerentals"
@@ -28,5 +32,11 @@
         android:name="com.vwaber.cdlexercise.ui.myyard.MyyardFragment"
         android:label="@string/title_myyard"
         tools:layout="@layout/fragment_myyard" />
+
+    <fragment
+        android:id="@+id/navigation_catalog_category"
+        android:name="com.vwaber.cdlexercise.ui.catalog.CatalogCategoryFragment"
+        android:label="fragment_catalog_category_list"
+        tools:layout="@layout/fragment_catalog_category_list" />
 
 </navigation>
