Update catalog category list layout

--- a/app/src/main/res/layout/fragment_catalog_category_list.xml
+++ b/app/src/main/res/layout/fragment_catalog_category_list.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
-    android:name="com.vwaber.cdlexercise.ui.catalog.CatalogCategoryFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.catalog.CatalogCategoryFragment"
-    tools:listitem="@layout/item_catalog_category" />
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/label_categories"
+        style="@style/section_label"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_categories"
+        android:name="com.vwaber.cdlexercise.ui.catalog.CatalogCategoryFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="LinearLayoutManager"
+        tools:context=".ui.catalog.CatalogCategoryFragment"
+        tools:listitem="@layout/item_catalog_category" />
+
+</LinearLayout>
