--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,8 @@
     <dimen name="bottom_nav_underline_thickness">2dp</dimen>
     <dimen name="bottom_nav_underline_margin_top">5dp</dimen>
 
-    <dimen name="store_separator_thickness">2dp</dimen>
+    <dimen name="separator_thickness">2dp</dimen>
     <dimen name="store_margin">20dp</dimen>
+
+    <dimen name="category_margin">16dp</dimen>
 </resources>
