--- a/app/src/main/res/layout/item_catalog_category.xml
+++ b/app/src/main/res/layout/item_catalog_category.xml
@@ -8,33 +8,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
         android:layout_margin="@dimen/category_margin"
+        android:gravity="center"
+        android:orientation="horizontal"
         tools:ignore="UseCompoundDrawables">
 
         <TextView
             android:id="@+id/tv_name"
+            style="@style/catalog_category"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="@style/catalog_category"
-            />
+            android:layout_weight="1" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/right_arrow"
+            android:contentDescription="@string/content_description_right_arrow"
             android:scaleX="0.6"
             android:scaleY="0.6"
-            android:contentDescription="@string/content_description_right_arrow" />
+            android:src="@drawable/right_arrow" />
 
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/separator_thickness"
-        android:background="@color/cdl_separator"
-        />
-    
+        android:background="@color/cdl_separator" />
+
 </LinearLayout>
